# College

CS 260/HW3/: Makefile.txt  lexer.py  post.py  test.py  view.py
CS 260/HW4/: 1.out  2.out  prob1.py  prob2.py  prob3.py  view2.py
CS 260/HW5/: prob1.py
CS 260/HW7/: bfs_dfs.py  set.py  test-set.py
CS 260/HW8/: prob1.py
CS 281/Lab 1/: log.txt
CS 281/Lab 2/: suma.asm  sump.asm  sumr.asm
CS 283/A1/: head.c
CS 283/A2/: sun.c
CS 283/A3/: ccdel.c  ccitem.c  cclist.c  ccmatch.c  makefile
CS 283/A4/: cc.h  ccadd.c  ccmenu.c  ccyear.c  makefile
CS 283/A5/: myshell.c
CS 283/A6/: myshell_a6.c
CS 283/A7/: myshell_a7.c
CS 283/A8/: chatclient.c
CS 361/mandelbrot/: makefile
CS 361/msort_starter/: config  makefile  readme.md
CS 361/race/: makefile  readme.md
CS 361/search_student/: config  makefile  readme.md
CS 472/hw1-pdu-c/: decoder  decoder.c
CS 472/hw2-echo-shell/: client.c  server copy.c
CS 472/hw3-http/: client-cc  client-cc.c  client-ka  client-ka.c  http.c  (+1 more)
CS360/: bank.bak  bank.rkt  lazymceval.rkt  lazymemmceval.rkt
CS360/hw5-utsavchaudhry/: .gitignore  HaskellIntro.hs  Makefile  README.md  haskell-intro.cabal
CS360/hw5-utsavchaudhry/.github/workflows/: push.yml
CS360/hw5-utsavchaudhry/test/: HaskellIntroSpec.hs  Util.hs
CS360/hw6-utsavchaudhry/: .gitignore  Art.hs  GenArt.hs  ImageUtils.hs  README.md  art.cabal
CS360/hw6-utsavchaudhry/.github/workflows/: push.yml
CS360/hw6-utsavchaudhry/test/: ArtSpec.hs  TestUtil.hs
cs380_a2/: agent.py  game.py  human.py  main.py  munch.py  util.py
cs380_a4/: ae1.py  ae2.py  ae3.py  autoencoder.py  classifier.py  cli.py  data.py  model.py  sample_ae.py  sample_cl.py
(+241 files in other folders)
