name:          haskell-intro
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base >= 4 && < 5

  exposed-modules:
    HaskellIntro

  default-language: Haskell2010

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:
    HaskellIntroSpec
    Util

  build-depends:
    haskell-intro,
    base       >= 4    && < 5,
    hspec      >= 2.10 && < 2.11,
    lifted-async,
    QuickCheck >= 2.14 && < 2.15

  default-language: Haskell2010
