name:          art
version:       0.1
cabal-version: 2.0

build-type: Simple

data-files:
  samples/*.png

library
  build-depends:
    base        >= 4     && < 5,
    JuicyPixels >= 3.3   && < 3.4,
    random      >= 1.2.1 && < 1.2.2,
    vector      >= 0.13  && < 0.14

  exposed-modules:
    Art
    GenArt
    ImageUtils
    Paths_art

  autogen-modules:
    Paths_art

  default-language: Haskell2010

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:
    ArtSpec
    Paths_art
    TestUtil

  build-depends:
    art,
    base        >= 4     && < 5,
    containers  >= 0.6.7 && < 0.6.8,
    filepath    >= 1.4.2 && < 1.4.3,
    hspec       >= 2.10  && < 2.11,
    lifted-async,
    JuicyPixels >= 3.3   && < 3.4,
    QuickCheck  >= 2.14  && < 2.15,
    random      >= 1.2.1 && < 1.2.2,
    vector      >= 0.13  && < 0.14

  default-language: Haskell2010
